# kfac-pytorch

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  kfac.py  kfac_precon.py  pyproject.toml  pytorch_mnist.py  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug.yml  02_enchancement.yml  03_docs.yml
.github/workflows/: cache.yml  integration.yml  style.yml  tests.yml
docs/: kfac.py  longhorn_gpu_install  longhorn_gpu_install.md  results.md
docs/TACC_Install_Instructions/: frontera_gpu_install.md  longhorn_gpu_install.md  longhorn_gpu_torch1.6.md  torchtext_longhorn_install.md
examples/: README.md  __init__.py  horovod_cifar10_resnet.py  horovod_imagenet_resnet.py  imagenet_resnet.py  pytorch_cifar10_resnet.py  pytorch_imagenet_resnet.py  pytorch_imagenet_resnet101.py  pytorch_imagenet_resnet152.py  pytorch_imagenet_resnet50.py  pytorch_wikitext_rnn.py  requirements.txt  torch_cifar10_resnet.py  torch_imagenet_resnet.py  torch_language_model.py  utils.py  wikitext_models.py
examples/cnn_utils/: cifar_resnet.py  datasets.py  engine.py  imagenet_resnet.py  optimizers.py
examples/language/: dataset.py  engine.py  transformer.py
examples/rnn_language_utils/: data.py
examples/rnn_language_utils/data/wikitext-2/: test.txt.REMOVED.git-id  train.txt.REMOVED.git-id  valid.txt.REMOVED.git-id
examples/rnn_utils/: lstm.py  utils.py  wikitext_models.py
examples/vision/: cifar_resnet.py  datasets.py  engine.py  optimizers.py
kfac/: __init__.py  allocator.py  assignment.py  base_preconditioner.py  comm.py  deepspeed.py  distributed.py  enums.py  gpt_neox.py  hyperparams.py  kfac.py  kfac_preconditioner.py  kfac_utils.py  layers.py  preconditioner.py  scheduler.py  test_kfac.py  tracing.py  utils.py  warnings.py  wip_kfac.py
kfac/gpt_neox/: __init__.py  assignment.py  layer.py  modules.py  mpu.py  preconditioner.py
kfac/layers/: __init__.py  base.py  conv.py  eigen.py  embedding.py  inverse.py  linear.py  linear_rnn.py  linear_rnn_opt2.py  modules.py  register.py  rnn.py  utils.py
kfac/modules/: __init__.py  lstm.py  rnn.py  rnn_cell.py
kfac/tests/: block_divide.py  load_balance.py  test_partition_workers.py  test_worker_allocator.py
kfac/utils/: __init__.py  comm.py  utils.py
sbatch/: README.md  cp_imagenet_to_temp.sh  kill_python_process.py
sbatch/longhorn/: cifar_kfac.slurm  cifar_kfac_gpu_4.slurm  horovod_imagenet_kfac.slurm  imagenet_kfac.slurm  imagenet_kfac_gpu_128.slurm  imagenet_kfac_gpu_16.slurm  imagenet_kfac_gpu_32.slurm  imagenet_kfac_gpu_64.slurm  imagenet_sgd_gpu_16.slurm  imagenet_sgd_gpu_32.slurm  imagenet_sgd_gpu_64.slurm  launch_node_torch_imagenet.sh  resnet_cifar_4gpu.slurm  resnet_imagenet_128gpu.slurm  resnet_imagenet_16gpu.slurm  resnet_imagenet_32gpu.slurm  resnet_imagenet_64gpu.slurm  resnet_imagenet_sgd_16gpu.slurm  torch_imagenet_kfac.slurm
scripts/: README.md  copy_and_extract.sh  kill_python_procs.sh  launch_node_torch_imagenet.sh  longhorn_gpu_install.md  longhorn_setup.md  run_imagenet.sh
scripts/sbatch/: horovod_cifar_kfac.slurm  horovod_imagenet_kfac.slurm  launch_node_torch_imagenet.sh  torch_imagenet_kfac.slurm
scripts/slurm/: horovod_imagenet_kfac.slurm  torch_cifar_kfac.slurm  torch_imagenet_kfac.slurm
temp/: cifar.py  log_sgd.py.REMOVED.git-id
temp2/: cifar.py  kfac.py  kfac_utils.py  log.txt.REMOVED.git-id
testing/: __init__.py  assignment.py  distributed.py  gpt_neox.py  models.py  utils.py
tests/: assignment_test.py  base_preconditioner_test.py  block_divide.py  communication.py  communication.sh  communication_test.py  distributed_test.py  gpt_neox_test.py  hyperparams_test.py  launch_communication.sh  load_balance.py  partition_workers_test.py  preconditioner_test.py  scheduler_test.py  test_communication.py  test_partition_workers.py  test_worker_allocator.py  tracing_test.py  training_test.py  worker_allocatior_test.py  worker_allocator.py  worker_allocator_test.py
tests/gpt_neox/: __init__.py  gpt_assignment_test.py  gpt_modules_test.py  gpt_mpu_test.py  gpt_preconditioner_test.py
tests/integration/: mnist_integration_test.py
tests/layers/: layers_test.py  modules_test.py  register_test.py  utils_test.py
tests/testing/: distributed_wrapper_test.py
