[build-system]
requires = ["setuptools>=64.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kfac_pytorch"
version = "0.4.1"
authors = [
    {name = "Greg Pauloski", email = "jgpauloski@uchicago.edu"},
]
description = "Distributed K-FAC Preconditioner for PyTorch."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "torch>=1.8",
]

[project.urls]
repository = "https://github.com/gpauloski/kfac_pytorch"

[project.optional-dependencies]
dev = [
    "covdefaults>=2.2",
    "coverage",
    "mypy",
    "numpy",
    "pre-commit",
    "protobuf==3.20.2",
    "pytest",
    "pytest-cov",
    "ruff",
    "torchtext",
    "torchvision>=0.9.0; python_version < '3.11'",
    "tox",
    "types-tqdm",
    "virtualenv",
]

[tool.codespell]
skip = """
.git,
.github,
__pycache__,
build,
dist,
.*egg-info
"""

[tool.coverage.run]
plugins = ["covdefaults"]
omit = ["examples/*", "testing/*", "tests/integration/*"]
concurrency = ["multiprocessing", "thread"]
parallel = true

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "testing.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[tool.ruff]
# pycodestyle, pyflakes, flake8-builtins, flake8-bugbear, isort, pep8-naming,
# pydocstyle, flake8-debugger, flake8-commas
select = ["E", "F", "A", "B", "I", "N", "D", "T10", "COM"]
# Ignore D202 because issue with inner function and black will fix it anyways
extend-ignore = ["D202", "D401"]
line-length = 79
target-version = "py38"

[tool.ruff.isort]
force-single-line = true
known-first-party = ["kfac_pytorch", "test", "testing"]
order-by-type = false
required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]
"examples/*__init__.py" = ["D104"]
"tests/*__init__.py" = ["D104"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.setuptools.packages.find]
exclude = ["tests*", "testing*"]
namespaces = false
