[metadata]
name = kfac_pytorch
version = 0.4.1
description = Distributed K-FAC Preconditioner for PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gpauloski/kfac_pytorch
author = Greg Pauloski
author_email = jgpauloski@uchicago.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    torch>=1.8
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
omit = testing/*,examples/*,tests/integration/*
concurrency = multiprocessing
parallel = true

[flake8]
docstring-convention = google
per-file-ignores =
    */__init__.py: F401
exclude = docs,.git,.github,__pycache__,build,dist,.*egg-info,venv

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = False

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
